Closed Bug 331428 Opened 19 years ago Closed 19 years ago

In DEC/OSF1 build failure in mozilla/gfx directory

Categories

(Core :: Graphics, defect)

DEC
OSF/1
defect
Not set
critical

Tracking

()

RESOLVED FIXED

People

(Reporter: laxmi.harikumar, Unassigned)

Details

Attachments

(1 file)

User-Agent: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.8.0.1) Gecko/20060111 Firefox/1.5.0.1 Build Identifier: In DEC/OSF1, the build fails in mozilla/gfx directory with the following error: Building deps for fbcompose.c cc -o fbcompose.o -c -DMOZILLA_INTERNAL_API -DOSTYPE=\"OSF1V5\" -DOSARCH=\"OSF1 \" -DBUILD_ID=2006032310 -I. -I../../../../dist/include -I../../../../dist/in clude/libpixman -I../../../../dist/include/nspr -I../../../../dist/sdk/includ e -ieee -pthread -DDEBUG -D_DEBUG -DDEBUG_dailybld -DTRACING -g -DHAVE_6 4BIT_OS=1 -DMOZILLA_VERSION=\"1.9a1\" -DMOZILLA_VERSION_U=1.9a1 -DNSCAP_DISABLE_ TEST_DONTQUERY_CASES=1 -DNSCAP_DISABLE_DEBUG_PTR_TYPES=1 -DNEED_USLEEP_PROTOTYPE =1 -DD_INO=d_ino -DSTDC_HEADERS=1 -DHAVE_ST_BLKSIZE=1 -DHAVE_SIGINFO_T=1 -DHAVE_ UINT=1 -DHAVE_UINT_T=1 -DHAVE_DIRENT_H=1 -DHAVE_GETOPT_H=1 -DHAVE_SYS_BITYPES_H= 1 -DHAVE_MEMORY_H=1 -DHAVE_UNISTD_H=1 -DHAVE_NL_TYPES_H=1 -DHAVE_MALLOC_H=1 -DHA VE_X11_XKBLIB_H=1 -DHAVE_SYS_STATVFS_H=1 -DHAVE_LIBC_R=1 -DHAVE_LIBM=1 -DFUNCPRO TO=15 -DHAVE_XSHM=1 -D_REENTRANT=1 -DHAVE_RANDOM=1 -DHAVE_STRERROR=1 -DHAVE_LCHO WN=1 -DHAVE_FCHMOD=1 -DHAVE_SNPRINTF=1 -DHAVE_MEMMOVE=1 -DHAVE_RINT=1 -DHAVE_FLO CKFILE=1 -DHAVE_LOCALTIME_R=1 -DHAVE_STRTOK_R=1 -DHAVE_LANGINFO_CODESET=1 -DNEED _CPP_DERIVED_TEMPLATE_OPERATORS=1 -DNEED_CPP_TEMPLATE_CAST_TO_BASE=1 -DCANT_RESO LVE_CPP_CONST_AMBIGUITY=1 -DHAVE_I18N_LC_MESSAGES=1 -DMOZ_DEFAULT_TOOLKIT=\"gtk\ " -DMOZ_WIDGET_GTK=1 -DMOZ_ENABLE_XREMOTE=1 -DMOZ_X11=1 -DMOZ_SUITE=1 -DMOZ_BUIL D_APP=suite -DMOZ_DISTRIBUTION_ID=\"org.mozilla\" -DMOZ_ENABLE_COREXFONTS=1 -DMO Z_EXTRA_X11CONVERTERS=1 -DOJI=1 -DIBMBIDI=1 -DMOZ_VIEW_SOURCE=1 -DACCESSIBILITY= 1 -DMOZ_XPINSTALL=1 -DMOZ_JSLOADER=1 -DNS_PRINTING=1 -DNS_PRINT_PREVIEW=1 -DMOZ_ XTF=1 -DMOZ_MATHML=1 -DMOZ_ENABLE_CANVAS=1 -DMOZ_SVG=1 -DMOZ_UPDATE_CHANNEL=defa ult -DMOZ_LOGGING=1 -DDETECT_WEBSHELL_LEAKS=1 -DMOZ_USER_DIR=\".mozilla\" -DNSCA P_DONT_PROVIDE_NONCONST_OPEQ=1 -DHAVE_INTTYPES_H=1 -DHAVE_UINT64_T=1 -DMOZ_XUL=1 -DMOZ_PROFILELOCKING=1 -DMOZ_MORK=1 -DMOZ_DLL_SUFFIX=\".so\" -DXP_UNIX=1 -DUNIX _ASYNC_DNS=1 -DJS_THREADSAFE=1 -DMOZ_REFLOW_PERF=1 -DMOZ_REFLOW_PERF_DSP=1 -DMOZ ILLA_LOCALE_VERSION=\"1.9a1\" -DMOZILLA_REGION_VERSION=\"1.9a1\" -DMOZILLA_SKIN_ VERSION=\"1.8\" -D_MOZILLA_CONFIG_H_ -DMOZILLA_CLIENT fbcompose.c cc: Severe: pixman.h, line 98: Cannot find file <stdint.h> specified in #include directive. (noinclfile) # include <stdint.h> --^ gmake[5]: *** [fbcompose.o] Error 1 gmake[5]: Leaving directory `/usr4/dailybld/mozilla/gfx/cairo/libpixman/src' Reproducible: Always Steps to Reproduce: 1. Go to mozilla/gfx 2. Run make 3. Actual Results: The build fails. Expected Results: The build should have succeeded
Since OSF1 does not have <stdint.h>, the solution is to use <inttypes.h> instead.
OS: Other → OSF/1
Hardware: Other → DEC
Status: UNCONFIRMED → NEW
Ever confirmed: true
Whom do I contact to review this fix and get it checked in?
Comment on attachment 215981 [details] [diff] [review] Patch to fix pixman.h build failure for OSF1 http://www.mozilla.org/owners.html is often a good start for finding reviewers
Attachment #215981 - Flags: review?(vladimir)
Comment on attachment 215981 [details] [diff] [review] Patch to fix pixman.h build failure for OSF1 This is fine; I need to remember to add this to the upstream cairo tree as well so it doesn't get blown away if we upgrade.
Attachment #215981 - Flags: review?(vladimir) → review+
(In reply to comment #4) > This is fine; I need to remember to add this to the upstream cairo tree as well > so it doesn't get blown away if we upgrade. I just committed this to upstream cairo: baa3436e9d8ea37c1204f752cac78a8cbc891f18 -Carl
Assignee: general → nobody
Component: GFX → GFX: Thebes
QA Contact: ian → thebes
did this get checked in?
Not yet.
checked in
Status: NEW → RESOLVED
Closed: 19 years ago
Resolution: --- → FIXED
I do not see the fix in Firefox 2 or Firefox 1.5.0.7. Does this need to be checked in?
(In reply to comment #9) > I do not see the fix in Firefox 2 or Firefox 1.5.0.7. Does this need to be > checked in? It was checked in, but only on the trunk. That means that the fix will be in Firefox 3.
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: