DEC/OSF1 build failure. bug 331428. patch from Laxmi Harikumar <laxmi.harikumar@digital.com>. r=vlad