gfx/cairo/libpixman/src/pixman.h
@@ -81,7 +81,7 @@ SOFTWARE.
 
 #if defined (__SVR4) && defined (__sun)
 # include <sys/int_types.h>
-#elif defined (__OpenBSD__) || defined (_AIX)
+#elif defined (__OpenBSD__) || defined (_AIX) || defined (__osf__)
 # include <inttypes.h>
 #elif defined (_MSC_VER)
   typedef __int8 int8_t;
